--- a/LabjackDataframeExportTesting.ipynb
+++ b/LabjackDataframeExportTesting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "\"\"\" Import Dataframe to file:\n",
+    "\"\"\" Import Dataframe from file:\n",
     "\"\"\"\n",
     "# dataframe_import_path = 'data/output/LabjackDataExport/output_dataframe_1-9-2020'\n",
     "out_dataframe_export_parent_path = Path('data/output/LabjackDataExport/')\n",
@@ -136,179 +136,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>start_date</th>\n",
-       "      <th>end_date</th>\n",
-       "      <th>variable_name</th>\n",
-       "      <th>variable_color</th>\n",
-       "      <th>extended_info_dict</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2019-07-08 12:40:18.716</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Food1_BeamBreak</td>\n",
-       "      <td>&lt;PyQt5.QtGui.QColor object at 0x0000025A53178748&gt;</td>\n",
-       "      <td>{'videoIndex': None, 'video_relative_offset': ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2019-07-08 12:40:20.950</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Food2_BeamBreak</td>\n",
-       "      <td>&lt;PyQt5.QtGui.QColor object at 0x0000025A53178518&gt;</td>\n",
-       "      <td>{'videoIndex': None, 'video_relative_offset': ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2019-07-08 12:40:21.711</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Food2_BeamBreak</td>\n",
-       "      <td>&lt;PyQt5.QtGui.QColor object at 0x0000025A53178518&gt;</td>\n",
-       "      <td>{'videoIndex': None, 'video_relative_offset': ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2019-07-08 12:40:25.269</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Food2_BeamBreak</td>\n",
-       "      <td>&lt;PyQt5.QtGui.QColor object at 0x0000025A53178518&gt;</td>\n",
-       "      <td>{'videoIndex': None, 'video_relative_offset': ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2019-07-08 12:40:25.522</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Food2_Dispense</td>\n",
-       "      <td>&lt;PyQt5.QtGui.QColor object at 0x0000025A53178198&gt;</td>\n",
-       "      <td>{'videoIndex': None, 'video_relative_offset': ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41184</th>\n",
-       "      <td>2019-10-04 16:54:04.070</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Water2_BeamBreak</td>\n",
-       "      <td>&lt;PyQt5.QtGui.QColor object at 0x0000025A5308F198&gt;</td>\n",
-       "      <td>{'videoIndex': 155, 'video_relative_offset': 2...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41185</th>\n",
-       "      <td>2019-10-04 16:54:04.325</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Water2_Dispense</td>\n",
-       "      <td>&lt;PyQt5.QtGui.QColor object at 0x0000025A53079358&gt;</td>\n",
-       "      <td>{'videoIndex': 155, 'video_relative_offset': 2...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41186</th>\n",
-       "      <td>2019-10-04 16:54:04.376</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Water2_BeamBreak</td>\n",
-       "      <td>&lt;PyQt5.QtGui.QColor object at 0x0000025A5308F198&gt;</td>\n",
-       "      <td>{'videoIndex': 155, 'video_relative_offset': 2...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41187</th>\n",
-       "      <td>2019-10-04 16:54:05.904</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Food2_BeamBreak</td>\n",
-       "      <td>&lt;PyQt5.QtGui.QColor object at 0x0000025A53178518&gt;</td>\n",
-       "      <td>{'videoIndex': 155, 'video_relative_offset': 2...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41188</th>\n",
-       "      <td>2019-10-04 16:54:06.159</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Food2_Dispense</td>\n",
-       "      <td>&lt;PyQt5.QtGui.QColor object at 0x0000025A53178198&gt;</td>\n",
-       "      <td>{'videoIndex': 155, 'video_relative_offset': 2...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>41189 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   start_date end_date     variable_name  \\\n",
-       "0     2019-07-08 12:40:18.716     None   Food1_BeamBreak   \n",
-       "1     2019-07-08 12:40:20.950     None   Food2_BeamBreak   \n",
-       "2     2019-07-08 12:40:21.711     None   Food2_BeamBreak   \n",
-       "3     2019-07-08 12:40:25.269     None   Food2_BeamBreak   \n",
-       "4     2019-07-08 12:40:25.522     None    Food2_Dispense   \n",
-       "...                       ...      ...               ...   \n",
-       "41184 2019-10-04 16:54:04.070     None  Water2_BeamBreak   \n",
-       "41185 2019-10-04 16:54:04.325     None   Water2_Dispense   \n",
-       "41186 2019-10-04 16:54:04.376     None  Water2_BeamBreak   \n",
-       "41187 2019-10-04 16:54:05.904     None   Food2_BeamBreak   \n",
-       "41188 2019-10-04 16:54:06.159     None    Food2_Dispense   \n",
-       "\n",
-       "                                          variable_color  \\\n",
-       "0      <PyQt5.QtGui.QColor object at 0x0000025A53178748>   \n",
-       "1      <PyQt5.QtGui.QColor object at 0x0000025A53178518>   \n",
-       "2      <PyQt5.QtGui.QColor object at 0x0000025A53178518>   \n",
-       "3      <PyQt5.QtGui.QColor object at 0x0000025A53178518>   \n",
-       "4      <PyQt5.QtGui.QColor object at 0x0000025A53178198>   \n",
-       "...                                                  ...   \n",
-       "41184  <PyQt5.QtGui.QColor object at 0x0000025A5308F198>   \n",
-       "41185  <PyQt5.QtGui.QColor object at 0x0000025A53079358>   \n",
-       "41186  <PyQt5.QtGui.QColor object at 0x0000025A5308F198>   \n",
-       "41187  <PyQt5.QtGui.QColor object at 0x0000025A53178518>   \n",
-       "41188  <PyQt5.QtGui.QColor object at 0x0000025A53178198>   \n",
-       "\n",
-       "                                      extended_info_dict  \n",
-       "0      {'videoIndex': None, 'video_relative_offset': ...  \n",
-       "1      {'videoIndex': None, 'video_relative_offset': ...  \n",
-       "2      {'videoIndex': None, 'video_relative_offset': ...  \n",
-       "3      {'videoIndex': None, 'video_relative_offset': ...  \n",
-       "4      {'videoIndex': None, 'video_relative_offset': ...  \n",
-       "...                                                  ...  \n",
-       "41184  {'videoIndex': 155, 'video_relative_offset': 2...  \n",
-       "41185  {'videoIndex': 155, 'video_relative_offset': 2...  \n",
-       "41186  {'videoIndex': 155, 'video_relative_offset': 2...  \n",
-       "41187  {'videoIndex': 155, 'video_relative_offset': 2...  \n",
-       "41188  {'videoIndex': 155, 'video_relative_offset': 2...  \n",
-       "\n",
-       "[41189 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "in_records_df"
    ]
@@ -318,14 +148,83 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "in_records_df.columns"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "in_records_df.extended_info_dict[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_records_df[['start_date', 'end_date', 'variable_name']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## https://stackoverflow.com/questions/38231591/splitting-dictionary-list-inside-a-pandas-column-into-separate-columns\n",
+    "\n",
+    "# in_records_df.extended_info_dict.apply(pd.Series)[['event_type', 'dispense_type', 'port']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# in_records_df.drop(['b'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Choose just the columns we care about. See https://stackoverflow.com/questions/11285613/selecting-multiple-columns-in-a-pandas-dataframe\n",
+    "# https://stackoverflow.com/questions/38231591/splitting-dictionary-list-inside-a-pandas-column-into-separate-columns\n",
+    "# https://stackoverflow.com/questions/34997174/how-to-convert-list-of-model-objects-to-pandas-dataframe/41762270\n",
+    "\n",
+    "# pd.concat([in_records_df.drop(['b'], axis=1), in_records_df['b'].apply(pd.Series)], axis=1)\n",
+    "# final_out_df = pd.concat([in_records_df[['start_date', 'end_date', 'variable_name']], in_records_df.extended_info_dict.apply(pd.Series)[['event_type', 'dispense_type', 'port']]], axis=1)\n",
+    "final_out_df = pd.concat([in_records_df[['start_date', 'variable_name']], in_records_df.extended_info_dict.apply(pd.Series)[['event_type', 'port']]], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_out_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# out_dataframe_export_path_final_csv = out_dataframe_export_parent_path.joinpath('output_final_dataframe_1-9-2020.csv') # Used for basic objects\n",
+    "out_dataframe_export_path_final_csv = out_dataframe_export_parent_path.joinpath('output_final_dataframe_1-9-2020-Filtered.csv') # Used for basic objects\n",
+    "\n",
+    "final_out_df.to_csv(out_dataframe_export_path_final_csv)"
+   ]
   },
   {
    "cell_type": "code",
