--- a/LabjackDataframeExportTesting.ipynb
+++ b/LabjackDataframeExportTesting.ipynb
@@ -26,7 +26,7 @@
     "# from GUI.UI.AbstractDatabaseAccessingWidgets import AbstractDatabaseAccessingQObject\n",
     "\n",
     "from app.filesystem.VideoUtils import findVideoFiles, VideoParsedResults, FoundVideoFileResult, CachedFileSource\n",
-    "from app.filesystem.Workers.VideoMetadataWorkers import VideoMetadataWorker\n",
+    "from app.filesystem.Workers.FileMetadataWorkers import FileMetadataWorker\n",
     "from app.filesystem.Workers.VideoFilesystemWorkers import VideoFilesystemWorker\n",
     "\n",
     "from GUI.Model.ModelViewContainer import ModelViewContainer\n",
