--- a/NewNeuropyDataTesting.ipynb
+++ b/NewNeuropyDataTesting.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,23 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "File 'W:\\Data\\KDIBA\\gor01\\one\\2006-6-08_14-26-15\\data_NeuroScope2.mat' can't be read as HDF5",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\pho\\repos\\PhoPyQtTimelinePlotter\\NewNeuropyDataTesting.ipynb Cell 5\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/NewNeuropyDataTesting.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m dialog \u001b[39m=\u001b[39m GroupDialog()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/NewNeuropyDataTesting.ipynb#W3sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# dialog.addFile(str(filenames_list[0]))\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/NewNeuropyDataTesting.ipynb#W3sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m [dialog\u001b[39m.\u001b[39maddFile(\u001b[39mstr\u001b[39m(a_filename)) \u001b[39mfor\u001b[39;00m a_filename \u001b[39min\u001b[39;00m filenames_list]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/NewNeuropyDataTesting.ipynb#W3sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m dialog\u001b[39m.\u001b[39mshow()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/NewNeuropyDataTesting.ipynb#W3sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mif\u001b[39;00m dialog\u001b[39m.\u001b[39mexec():\n",
-      "\u001b[1;32mc:\\Users\\pho\\repos\\PhoPyQtTimelinePlotter\\NewNeuropyDataTesting.ipynb Cell 5\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/NewNeuropyDataTesting.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m dialog \u001b[39m=\u001b[39m GroupDialog()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/NewNeuropyDataTesting.ipynb#W3sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# dialog.addFile(str(filenames_list[0]))\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/NewNeuropyDataTesting.ipynb#W3sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m [dialog\u001b[39m.\u001b[39;49maddFile(\u001b[39mstr\u001b[39;49m(a_filename)) \u001b[39mfor\u001b[39;00m a_filename \u001b[39min\u001b[39;00m filenames_list]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/NewNeuropyDataTesting.ipynb#W3sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m dialog\u001b[39m.\u001b[39mshow()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/NewNeuropyDataTesting.ipynb#W3sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mif\u001b[39;00m dialog\u001b[39m.\u001b[39mexec():\n",
-      "File \u001b[1;32mc:\\Users\\pho\\miniconda3\\envs\\PyQt6\\lib\\site-packages\\silx\\gui\\dialog\\GroupDialog.py:135\u001b[0m, in \u001b[0;36m_Hdf5ItemSelectionDialog.addFile\u001b[1;34m(self, path)\u001b[0m\n\u001b[0;32m    129\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39maddFile\u001b[39m(\u001b[39mself\u001b[39m, path):\n\u001b[0;32m    130\u001b[0m     \u001b[39m\"\"\"Add a HDF5 file to the tree.\u001b[39;00m\n\u001b[0;32m    131\u001b[0m \u001b[39m    All groups it contains will be selectable in the dialog.\u001b[39;00m\n\u001b[0;32m    132\u001b[0m \n\u001b[0;32m    133\u001b[0m \u001b[39m    :param str path: File path\u001b[39;00m\n\u001b[0;32m    134\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 135\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_model\u001b[39m.\u001b[39;49minsertFile(path)\n",
-      "File \u001b[1;32mc:\\Users\\pho\\miniconda3\\envs\\PyQt6\\lib\\site-packages\\silx\\gui\\hdf5\\Hdf5TreeModel.py:654\u001b[0m, in \u001b[0;36mHdf5TreeModel.insertFile\u001b[1;34m(self, filename, row)\u001b[0m\n\u001b[0;32m    649\u001b[0m \u001b[39m\"\"\"Load a HDF5 file into the data model.\u001b[39;00m\n\u001b[0;32m    650\u001b[0m \n\u001b[0;32m    651\u001b[0m \u001b[39m:param filename: file path.\u001b[39;00m\n\u001b[0;32m    652\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    653\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 654\u001b[0m     h5file \u001b[39m=\u001b[39m silx_io\u001b[39m.\u001b[39;49mopen(filename)\n\u001b[0;32m    655\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__ownFiles:\n\u001b[0;32m    656\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__openedFiles\u001b[39m.\u001b[39mappend(h5file)\n",
-      "File \u001b[1;32mc:\\Users\\pho\\miniconda3\\envs\\PyQt6\\lib\\site-packages\\silx\\io\\utils.py:601\u001b[0m, in \u001b[0;36mopen\u001b[1;34m(filename)\u001b[0m\n\u001b[0;32m    599\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m url\u001b[39m.\u001b[39mis_valid():\n\u001b[0;32m    600\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mIOError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mURL \u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is not valid\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m filename)\n\u001b[1;32m--> 601\u001b[0m     h5_file \u001b[39m=\u001b[39m _open_local_file(url\u001b[39m.\u001b[39;49mfile_path())\n\u001b[0;32m    602\u001b[0m \u001b[39melif\u001b[39;00m url\u001b[39m.\u001b[39mscheme() \u001b[39min\u001b[39;00m [\u001b[39m\"\u001b[39m\u001b[39mfabio\u001b[39m\u001b[39m\"\u001b[39m]:\n\u001b[0;32m    603\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mIOError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mURL \u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m containing fabio scheme is not supported\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m filename)\n",
-      "File \u001b[1;32mc:\\Users\\pho\\miniconda3\\envs\\PyQt6\\lib\\site-packages\\silx\\io\\utils.py:525\u001b[0m, in \u001b[0;36m_open_local_file\u001b[1;34m(filename)\u001b[0m\n\u001b[0;32m    522\u001b[0m     \u001b[39mfor\u001b[39;00m exc_info, message \u001b[39min\u001b[39;00m debugging_info:\n\u001b[0;32m    523\u001b[0m         logger\u001b[39m.\u001b[39mdebug(message, exc_info\u001b[39m=\u001b[39mexc_info)\n\u001b[1;32m--> 525\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mIOError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mFile \u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m can\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt be read as HDF5\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m filename)\n",
-      "\u001b[1;31mOSError\u001b[0m: File 'W:\\Data\\KDIBA\\gor01\\one\\2006-6-08_14-26-15\\data_NeuroScope2.mat' can't be read as HDF5"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File path: W:\\Data\\KDIBA\\gor01\\one\\2006-6-08_14-26-15\\2006-6-08_14-26-15.position_info.mat\n",
+      "HDF5 group path : / \n"
      ]
     }
    ],
