--- a/src/phopyqttimelineplotter/NewNeuropyDataTesting.ipynb
+++ b/src/phopyqttimelineplotter/NewNeuropyDataTesting.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "from pathlib import Path\n",
     "# C:\\Users\\pho\\repos\\PhoPyQtTimelinePlotter\\app\n",
-    "from PhoPyQtTimelinePlotter.app.filesystem.FilesystemRecordBase import discover_data_files\n",
+    "from phopyqttimelineplotter.app.filesystem.FilesystemRecordBase import discover_data_files\n",
     "# from app.filesystem.FilesystemRecordBase import discover_data_files\n",
     "\n",
     "# silx GUI:\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,22 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[WindowsPath('C:/Users/pho/repos/PhoPy3DPositionAnalysis2021/data/computation_results_cache_store.h5'),\n",
-       " WindowsPath('C:/Users/pho/repos/PhoPy3DPositionAnalysis2021/data/pipeline_cache_store.h5'),\n",
-       " WindowsPath('C:/Users/pho/repos/PhoPy3DPositionAnalysis2021/data/test_cache_store.h5')]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "filenames_list = discover_data_files(files_search_parent_path, file_extension='.h5', recursive=wants_recurrsive_data_file_search)\n",
     "filenames_list\n"
@@ -79,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,18 +102,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File path: W:\\Data\\KDIBA\\gor01\\one\\2006-6-08_14-26-15\\2006-6-08_14-26-15.position_info.mat\n",
-      "HDF5 group path : / \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from silx.gui.dialog.GroupDialog import GroupDialog\n",
     "\n",
@@ -165,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
