changed GUI.* imports to phopyqttimelineplotter.GUI.* imports

--- a/src/phopyqttimelineplotter/LabjackDataframeExportTesting.ipynb
+++ b/src/phopyqttimelineplotter/LabjackDataframeExportTesting.ipynb
@@ -23,18 +23,18 @@
     "# from PyQt5.QtGui import QPainter, QBrush, QPen, QColor, QFont, QIcon\n",
     "# from PyQt5.QtCore import Qt, QPoint, QRect, QObject, QEvent, pyqtSignal, pyqtSlot, QSize, QDir, QThreadPool\n",
     "\n",
-    "# from GUI.UI.AbstractDatabaseAccessingWidgets import AbstractDatabaseAccessingQObject\n",
+    "# from phopyqttimelineplotter.GUI.UI.AbstractDatabaseAccessingWidgets import AbstractDatabaseAccessingQObject\n",
     "\n",
     "from app.filesystem.VideoUtils import findVideoFiles, VideoParsedResults, FoundVideoFileResult, CachedFileSource\n",
     "from app.filesystem.Workers.FileMetadataWorkers import FileMetadataWorker\n",
     "from app.filesystem.Workers.VideoFilesystemWorkers import VideoFilesystemWorker\n",
     "\n",
-    "from GUI.Model.ModelViewContainer import ModelViewContainer\n",
+    "from phopyqttimelineplotter.GUI.Model.ModelViewContainer import ModelViewContainer\n",
     "from app.filesystem.FilesystemOperations import OperationTypes, PendingFilesystemOperation\n",
     "from app.filesystem.LabjackData.LabjackEventsLoader import LabjackEventsLoader, PhoServerFormatArgs\n",
     "\n",
     "from app.filesystem.FilesystemRecordBase import FilesystemRecordBase, FilesystemLabjackEvent_Record\n",
-    "from GUI.Model.Events.PhoDurationEvent import PhoDurationEvent\n",
+    "from phopyqttimelineplotter.GUI.Model.Events.PhoDurationEvent import PhoDurationEvent\n",
     "\n",
     "from app.filesystem.LabjackData.LabjackFilesystemLoadingMixin import LabjackEventFile, LabjackFilesystemLoader"
    ]
