--- a/src/phopyqttimelineplotter/NewNeuropyDataTesting.ipynb
+++ b/src/phopyqttimelineplotter/NewNeuropyDataTesting.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'PhoPyQtTimelinePlotter'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\pho\\repos\\PhoPyQtTimelinePlotter\\src\\phopyqttimelineplotter\\NewNeuropyDataTesting.ipynb Cell 1\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/src/phopyqttimelineplotter/NewNeuropyDataTesting.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpathlib\u001b[39;00m \u001b[39mimport\u001b[39;00m Path\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/src/phopyqttimelineplotter/NewNeuropyDataTesting.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# C:\\Users\\pho\\repos\\PhoPyQtTimelinePlotter\\app\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/src/phopyqttimelineplotter/NewNeuropyDataTesting.ipynb#W0sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mPhoPyQtTimelinePlotter\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapp\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfilesystem\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mFilesystemRecordBase\u001b[39;00m \u001b[39mimport\u001b[39;00m discover_data_files\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/src/phopyqttimelineplotter/NewNeuropyDataTesting.ipynb#W0sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# from app.filesystem.FilesystemRecordBase import discover_data_files\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/src/phopyqttimelineplotter/NewNeuropyDataTesting.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/src/phopyqttimelineplotter/NewNeuropyDataTesting.ipynb#W0sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# silx GUI:\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/pho/repos/PhoPyQtTimelinePlotter/src/phopyqttimelineplotter/NewNeuropyDataTesting.ipynb#W0sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msilx\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgui\u001b[39;00m \u001b[39mimport\u001b[39;00m qt\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'PhoPyQtTimelinePlotter'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy\n",
     "import sys\n",
@@ -29,6 +17,24 @@
     "# silx GUI:\n",
     "from silx.gui import qt\n",
     "from silx.gui.plot.StackView import StackViewMainWindow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4223479710.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [2]\u001b[1;36m\u001b[0m\n\u001b[1;33m    from phopyqttimelineplotter.GUI.UI.CustomDataSelectionWidget import\u001b[0m\n\u001b[1;37m                                                                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# from phopyqttimelineplotter.GUI.UI.CustomDataSelectionWidget import "
    ]
   },
   {
