--- a/src/phopyqttimelineplotter/NewNeuropyDataTesting.ipynb
+++ b/src/phopyqttimelineplotter/NewNeuropyDataTesting.ipynb
@@ -21,25 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (4223479710.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [2]\u001b[1;36m\u001b[0m\n\u001b[1;33m    from phopyqttimelineplotter.GUI.UI.CustomDataSelectionWidget import\u001b[0m\n\u001b[1;37m                                                                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from phopyqttimelineplotter.GUI.UI.CustomDataSelectionWidget import "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,9 +53,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[WindowsPath('C:/Users/pho/repos/PhoPy3DPositionAnalysis2021/data/computation_results_cache_store.h5'),\n",
+       " WindowsPath('C:/Users/pho/repos/PhoPy3DPositionAnalysis2021/data/pipeline_cache_store.h5'),\n",
+       " WindowsPath('C:/Users/pho/repos/PhoPy3DPositionAnalysis2021/data/test_cache_store.h5')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "filenames_list = discover_data_files(files_search_parent_path, file_extension='.h5', recursive=wants_recurrsive_data_file_search)\n",
     "filenames_list\n"
@@ -72,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,9 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Operation cancelled :(\n"
+     ]
+    }
+   ],
    "source": [
     "from silx.gui.dialog.GroupDialog import GroupDialog\n",
     "\n",
