--- a/src/phopyqttimelineplotter/NewNeuropyDataTesting.ipynb
+++ b/src/phopyqttimelineplotter/NewNeuropyDataTesting.ipynb
@@ -12,7 +12,7 @@
     "from pathlib import Path\n",
     "# C:\\Users\\pho\\repos\\PhoPyQtTimelinePlotter\\app\n",
     "from phopyqttimelineplotter.app.filesystem.FilesystemRecordBase import discover_data_files\n",
-    "# from app.filesystem.FilesystemRecordBase import discover_data_files\n",
+    "# from phopyqttimelineplotter.app.filesystem.FilesystemRecordBase import discover_data_files\n",
     "\n",
     "# silx GUI:\n",
     "from silx.gui import qt\n",
